--- a/app/views/book/booking.erb
+++ b/app/views/book/booking.erb
@@ -140,6 +140,10 @@
   <script>
     alert("지난 날은 예약이 안되며, 마침시간은 시작시간보다 전이어야 합니다!");
   </script>
+<% elsif @save_result =="hh"%>
+  <script>
+    alert("무슨오류일꺄?");
+  </script>
 <%end%>
 
 
