--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -171,10 +171,7 @@
                     <th>사용시간</th>
                     <th>승인여부</th>
                     <th></th>
-                  <% if current_user.email=="admin@ptu.ac.kr"%>
-                    <th>상세</th>
-                    <th>관리자 승인</th>
-                  <%end%>
+                 
                     
                   </tr>
                 </thead>
@@ -202,7 +199,8 @@
                       </td>  
                       
                       <!--<#% if current_user.email=="admin@ptu.ac.kr"%> <!-- 관리자일 경우-->
-                        <td><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세정보</button></td>
+                        
+                        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세정보</button></td>
                         <td>
                         <%if c.state=="승인대기"%>
                           
