--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -1,4 +1,4 @@
-<div id="top" style="background-image: url(http://ironsummitmedia.github.io/startbootstrap-landing-page/img/banner-bg.jpg); background-size: cover; height:1000px;">
+<div id="top" style="background-image: url(http://blackrockdigital.github.io/startbootstrap-landing-page/img/banner-bg.jpg); background-size: cover; height:1000px;">
      <!--<div class="jumbotron" id="top" style="background-image: url(https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/11947483_833544056761626_6388524221709896910_n.jpg?oh=df1434c4094e5f37d1222391567bd482&oe=56807E0E&__gda__=1446490038_9fe83b67f9ad1e62d26e55431b0817a2); background-size: cover; height:530px;">-->
  <div class="container" id="menu_font" style="padding-top:150px; align:center;color:white">
   
@@ -620,10 +620,10 @@
 <!--      <div class="modal-body">-->
         
 <!--        <textarea name="content" class="form-control" placeholder="거절 사유를 입력해주세요 :D" rows="10" cols="70"  required></textarea>-->
-<!--        <input type="hidden" name="reservation_num" value="<2%=c.id%>"><!--예약 넘버-->-->
-<!--        <input type="hidden" name="state" value="거절"><!--예약 넘버-->-->
-<!--        <input type="hidden" name="receiver" value="<2%=c.user%>"><!--예약 넘버-->-->
-<!--        <input type="hidden" name="sender" value="<2%=current_user.id%>"><!--예약 넘버-->-->
+<!--        <input type="hidden" name="reservation_num" value="<2%=c.id%>"><!--예약 넘버-->
+<!--        <input type="hidden" name="state" value="거절"><!--예약 넘버-->
+<!--        <input type="hidden" name="receiver" value="<2%=c.user%>"><!--예약 넘버-->
+<!--        <input type="hidden" name="sender" value="<2%=current_user.id%>"><!--예약 넘버-->
 <!--      </div>-->
 <!--      <div class="modal-footer">-->
 <!--        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
